--- a/index.html
+++ b/index.html
@@ -4,10 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agrument</title>
 </head>
 
 <body>
+
+    <h1>Welcome to our debate between Food delivery vs Cooking at Home</h1>
+    <p>Created by Qihong Liu [Anser] and Chanya Chumdee [Yaya]</p>
+    <hr>
+    <h2>Food delivery 🥡 vs Cooking at Home 🧑‍🍳</h2>
+    <p>Here we will discuss the pros and cons of food delivery and cooking at home. With the thrive of internet and city
+        development, food delivery has become a popular trend of eating among the young people.</p>
+    <img src="images/food-delivery.jpeg" alt="food-delivery" width="440" height="300">
+    <img src="images/cooking-at-home.jpg" alt="cooking-at-home" width="440" height="300">
+
+    <h3>Convenience and Time:</h3>
+    <!-- Anser  -->
+    <img src="images/preparing-food.jpg" alt="preparing-food" width="440" height="300">
+    <p>Although cooking at home requires more time and effort to prepare the cooking process and clean up the kitchen,
+        it can be faster by meal planning and practice. Meal planning helps an individual to think about their meal
+        ahead of time, so they can prepare all of the ingredients for the following day which reduces time consuming
+        while cooking and to choose a menu or answer the question about what should i eat today?. Another point is that
+        the cooking process can be faster by practicing. For the first time doing something new, it usually takes time
+        to get better but when we get used to it we can do it quicker than in the past.</p>
+
+    <h3>Cost Efficiency:</h3>
+    <!-- Anser -->
+    <img src="images/meal-planning.png" alt="meal-planning" width="450" height="300">
+    <p>On the other hand, cooking at home is highly cost efficient as there are various benefits of meal planning which
+        is control the cost and it also not creating food waste. Meal planning ahead of time is putting the cost under
+        control especially when individuals need to stock up the ingredient they will have a purpose for shopping just
+        only buy the thing in a list and buy the ingredient that is necessary for cooking. Which has a direct effect on
+        reducing food waste as we can plan the menu and consume it week by week and the ingredient will not rot or
+        expire just because we forgot and left it in the fridge.</p>
+
+    <h3>Health and Nutrition:</h3>
+    <!-- Anser -->
+    <img src="images/seasoning-food.jpg" alt="seasoning-food" width="450" height="300">
+    <p>Although the tendency of healthy food has become more popular and there are various options on food delivery,
+        there is also a negative effect. We can not deny that when we rely on food delivery, we can not control the
+        flavour of the food which affects health issues such as obesity and Chronic kidney disease. On top of that, it
+        might has a micro plastic mix in the container of the food due to the heat of the food or boiling soup.</p>
+
+    <h3>Conclusion:</h3>
+    <p>In conclusion, food delivery serve convenience and time savings, requiring less effort and skill compared to
+        cooking at home. On the contrary cooking can be time-consuming, meal planning and practice can make it faster.
+        Cost efficiency regarding transportation fee aspect, food delivery is not that different compared to cooking at
+        home while cooking at home is more efficient, as meal planning helps control expenses and reduce food waste. In
+        terms of health, although there are various choices on food delivery, cooking at home is safer due to food
+        delivery lack of flavored control and possible microplastics from containers. Both food delivery and cooking at
+        home have different advantages and disadvantages. Eventually it depends on life conditions and preference.</p>
 
 </body>
 
