adding the argument
adding the argument of supporting food delivery

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 
 <body>
-
+    <h3>Convenience and Time:</h3>
+    <img src="images/FD1.png" alt="food_delivery1" width="440" height="300">
+      <p>Food delivery is an extremely convenient option if you want a meal. You don't need to cook, buy ingrdients or even go out. A research mentioned in an 
+       article(1) indicated that the meal preparation time for usual meal preparers who purchased fast food was 27 minutes, versus 58 minutes for those who 
+       did not purchase fast food—a time savings of 31 minutes, saving more than half of the time, not to mention the clean-up time for cooking at home. That is
+       why food delivery is an extremely convenient option</p>
+    <h3>Cost Efficiency:</h3>
+   <img src="images/FD2.png" alt="food_delivery2" width="440" height="300">
+      <p>Some may argue that the food delivery serveice is much expensive than cooking at home, but consider the transpotaion fee on the way to buy the ingrdients,
+      the energy usage such as electricity or gas and the ingredients that can not be fully consumed, the cost different between deliveried food and home-made food 
+      may not be as large as most people think due to these potential cost.</p>
+    <h3>Health and Nutrition:</h3>
+    <img src="images/FD3.png" alt="food_delivery3" width="440" height="300">
+      <p>It is true that the major position in delivery market is hold by fast food, but there are also some delivery services that are providing more heathler 
+      option, such as Factor, Epicured, Daily Harvest and Sunbasket.</p>
 </body>
 
 </html>
